# Easy-Minecraft-Server-Installer

./: Cargo.toml
src/: main.rs
