[package]
name = "easy-minecraft-server-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
indicatif = "0.18.4"
inquire = "0.9.4"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228",  features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
zip = "8.6.0"
